# Rain

./: CMakeLists.txt
Rain/: CMakeLists.txt
RainEngine/: CMakeLists.txt
RainEngine/include/: EntryPoint.h
RainEngine/include/VFX/: Particle.h
RainEngine/include/framework/: Actor.h  Application.h  AssetManager.h  BackdropActor.h  BackgroundLayer.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
RainEngine/include/gameplay/: GameStage.h  WaitStage.h
RainEngine/include/widgets/: Button.h  HUD.h  ImageWidget.h  TextWidget.h  ValueGauge.h  Widget.h
RainEngine/src/: EntryPoint.cpp
RainEngine/src/VFX/: Particle.cpp
RainEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  BackdropActor.cpp  BackgroundLayer.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
RainEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
RainEngine/src/widgets/: Button.cpp  HUD.cpp  ImageWidget.cpp  TextWidget.cpp  ValueGauge.cpp  Widget.cpp
RainGame/: CMakeLists.txt  Config.h.in
RainGame/assets/SpaceShooterRedux/PNG/: ufoBlue.kra  ufoRed.kra
RainGame/assets/SpaceShooterRedux/PNG/Planets/: Planet1.kra  Planet1_lol.kra  Planet2.kra
RainGame/include/: config.h
RainGame/include/Enemy/: Boss.h  BossStage.h  ChaosStage.h  EnemySpaceship.h  Hexagon.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UFO.h  UFOStage.h  Vanguard.h  VanguardStage.h
RainGame/include/Level/: GameLevelOne.h  MainMenuLevel.h
RainGame/include/Player/: Player.h  PlayerManager.h  PlayerSpaceShip.h  Reward.h
RainGame/include/SpaceShip/: SpaceShip.h
RainGame/include/VFX/: Explosion.h
RainGame/include/Weapon/: Bullet.h  BulletShooter.h  FrontalWiper.h  Shooter.h  ThreeWayShooter.h  ZigZagRocket.h
RainGame/include/gameFramework/: GameApplication.h
RainGame/include/gameplay/: HealthComponent.h
RainGame/include/widgets/: GameplayHUD.h  MainMenuHUD.h
RainGame/src/Enemy/: Boss.cpp  BossStage.cpp  ChaosStage.cpp  EnemySpaceship.cpp  Hexagon.cpp  HexagonStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UFO.cpp  UFOStage.cpp  Vanguard.cpp  VanguardStage.cpp
RainGame/src/Level/: GameLevelOne.cpp  MainMenuLevel.cpp
RainGame/src/Player/: Player.cpp  PlayerManager.cpp  PlayerSpaceShip.cpp  Reward.cpp
RainGame/src/SpaceShip/: SpaceShip.cpp
RainGame/src/VFX/: Explosion.cpp
RainGame/src/Weapon/: Bullet.cpp  BulletShooter.cpp  FrontalWiper.cpp  Shooter.cpp  ThreeWayShooter.cpp  ZigZagRocket.cpp
RainGame/src/gameFramework/: GameApplication.cpp
RainGame/src/gameplay/: HealthComponent.cpp
RainGame/src/widgets/: GameplayHUD.cpp  MainMenuHUD.cpp
